--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -43,7 +43,7 @@
               %p{ style: "font-size: 13px; margin: 10px 5px; color: black;" } Click on one of the questions below to see responses only for that question.
               %ol
                 - @path.sections.each do |s|
-                  - s.creative_tasks.each do |task|
+                  - s.challenge_tasks.each do |task|
                     %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), task_details_path(@path, task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
         = render "shared/newsfeed", { newsfeed_items: @responses }
 
