--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -161,7 +161,7 @@ code,pre{font:inherit;}
 .challengetiles .bigexploreimagespace{display:inline-block; vertical-align: top;}
 .challengetiles .bigexploreimagespace img{width:120px; margin-right:10px}
 
-.singleexploretile{display:inline-block; padding:0 27px 0 21px;}
+.singleexploretile{display:inline-block; padding:0 25px 0 21px;}
 .singleexploretile img{padding:6px 0 8px 0;}
 .singleexploretile a{margin:2px; text-decoration:none;}
 .singleexploretile a:hover img{border:2px solid rgba(51, 153, 255, 0.5); border-radius:4px; margin:-2px}
@@ -249,7 +249,7 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weigh
 .introintcontent>ul>li>img{display:inline; height:35px;margin-right:5px; position:relative; top:19px; opacity:.8;}
 .introintcontent>ul>li>.inttitle{}
 .introintcontent>ul>li>.intdetails{margin-left:45px;}
-#explore_modal { width: 100%; background-color: transparent; border: 0; box-shadow: 0 0 0; margin-left: auto; margin-right: auto; top: 45%; left: inherit; }
+#explore_modal { width: 100%; background-color: transparent; border: 0; box-shadow: 0 0 0; margin-left: auto; margin-right: auto; top: 0%; left: inherit; margin-top: 0px; }
 
 /* Create and Administer */
 .single_pane { padding: 15px; background-color: white; border-radius: 4px; min-height: 400px;}
