--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -2,17 +2,17 @@
   .aboutbox
     .aboutheader
       %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png"}
-        %span Challenges of MetaBright
+        %span MetaBright Challenges
     %hr{:style => "margin:0"}
       .aboutbody
         - @personas.each do |persona|
           %h4= persona.name
-          %div
+          %div{style: "margin-bottom:5px;"}
             - persona.paths.each do |path|
-              %div.mosaic-block.bar2
+              %div.mosaic-block.bar2{style: "margin-bottom:10px;"}
                 = link_to enroll_path_url(path), class: "mosaic-overlay" do
                   %div.details
-                    %h4 #{truncate(path.name,length: 17, separator: ' ')}
+                    %h4{style: "font-weight:normal"} #{truncate(path.name,length: 17, separator: ' ')}
                     - if current_user.enrolled?(path)
                       %button.btn.success Enrolled
                     - else
