--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -33,5 +33,8 @@
             %center
               %div.youtube_answer{ id: "youtube_answer_#{r.id}", alt: r.submitted_answer.content }
       = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at}
-%div.post{ style: "text-align: center; margin: auto;" }
-  %button.button.button-standard.view_more{ style: "text-align: center; margin: auto;", alt: (newsfeed_items.last.id) } View More
+- if @more_available
+  %div.post{ style: "text-align: center; margin: auto;" }
+    :javascript
+      $(function(){ $(".view_more").on("ajax:success", function(xhr, data){ console.log(data); $(this).parent().replaceWith(data); }); });
+    = link_to "View More", "#{request.url}?page=#{(@page+1)}", class: "button button-standard view_more", style: "text-align: center; margin: auto;", remote: true
