--- a/app/views/pages/tos.html.haml
+++ b/app/views/pages/tos.html.haml
@@ -13,6 +13,8 @@
         %p
           The rules are, quite simply, don't be a jerk - treat others the way you want to be treated.
           And if you like to be abused, then MetaBright isn't the place for you, but we can suggest some specialty clubs in San Francisco that might be up your alley.
+        %p
+          If you break any of the following rules, you'll get banned from MetaBright with no opportunity for recourse:
         %ul
           %li No hate speech
           %li No harassment or threats of violence against others
