--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -1,15 +1,40 @@
+:css
+  #carousel_container { background-color: whitesmoke; height:100px; border-bottom-left-radius:6px; border-bottom-right-radius:6px;}
+  #carousel_inner { margin-left:23px; float:left; /* important for inline positioning */ width:864px; /* important (this width = width of list item(including margin) * items shown */ overflow: hidden;  /* important (hide the items outside the div) */position:relative; }   
+  #carousel_ul { position:relative; left:-216px; /* important (this should be negative number of list items width(including margin) */  list-style-type: none; /* removing the default styling for unordered list items */ margin: 0px;  padding: 0px;  width:9999px; /* important */ padding-bottom:10px; }   
+  #carousel_ul li{ float: left; /* important for inline positioning of the list items */  width:200px;  /* fixed width, important */ padding:0px; height:80px; background: #000000; margin:10px 8px; }  
+  #left_scroll, #right_scroll{ float:left; height:80px;  width:15px; }  
+  #left_scroll img, #right_scroll img{ margin: 28px 0 0 10px; width:25px; border:0; /* remove the default border of linked image */cursor: pointer; cursor: hand; }
+  #left_scroll img {margin-left:10px;}
+  #right_scroll img{margin-left:1px;}
+  %script{:src => "app/assets/javascripts/carousel.js", :type => "text/javascript"}
+
 %div#homepage
   %div#topsection
     %div.headerspace
       %div#leftheaderspace Explore the world of Metabright
-    %div#carouselupdatespace
-      %ul.inlinedisplay
-        - @enrollments.each do |e|
-          = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
-        - if @enrollments.size < 4
-          = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
-        - unless current_user.profile_complete?
-          = render "shared/mosaic", { link: edit_user_path(current_user), title: "Whoooo are you?", subtitle: "Tell your story to the world!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/complete_profile_pic_carousel_altered.png" }
+    %div#carousel_container
+      %div#left_scroll
+        %a{href: "javascript:slide(\"left\");"}
+          %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png"}/
+      %div#carousel_inner
+        %ul#carousel_ul{style: "left:-216px"}
+          - @enrollments.each do |e|
+            = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
+          - if @enrollments.size < 4
+            = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
+          - unless current_user.profile_complete?
+            = render "shared/mosaic", { link: edit_user_path(current_user), title: "Whoooo are you?", subtitle: "Tell your story to the world!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/complete_profile_pic_carousel_altered.png" }
+          - @enrollments.each do |e|
+            = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
+          - if @enrollments.size < 4
+            = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
+          - unless current_user.profile_complete?
+            = render "shared/mosaic", { link: edit_user_path(current_user), title: "Whoooo are you?", subtitle: "Tell your story to the world!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/complete_profile_pic_carousel_altered.png" }
+      %div#right_scroll
+        %a{href: "javascript:slide(\"right\");"}
+          %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png"}/
+      %input#hidden_auto_slide_seconds{:type => "hidden", :value => "0"}/
   %div.row
     %div.span5
       - unless @suggested_paths.empty?
