--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,6 @@
+%script{:src => "app/assets/javascripts/challenge_carousel.js", :type => "text/javascript"}
+    
+
 :javascript
   jQuery(function($){
     $('.bar2').mosaic({
@@ -20,10 +23,19 @@
           %div.span9{style: "min-height: 65px; vertical-align: top; margin-bottom: 10px;"}
             %h1= @user.name
             %p{ style: "font-size: 16px; margin: 5px 0 7px 0;"}= truncate(@enrolled_personas.collect(&:name).join(", "), length: 70)
-        %div.challengecarousel
-          %ul.inlinedisplay
-            - @enrollments.each do |e|
-              = render "shared/mosaic", { custom_class: "clip_pic", pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
+        %div#challengecarousel_container
+          %div#challengeleft_scroll
+            %a{href: "javascript:challengeslide(\"left\");"}
+              %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png"}/
+          %div#challengecarousel_inner
+            %ul#challengecarousel_ul
+              - @enrollments.each do |e|
+                = render "shared/mosaic", { custom_class: "clip_pic", pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
+          %div#challengeright_scroll
+            %a{href: "javascript:challengeslide(\"right\");"}
+              %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png"}/
+      %input#challengehidden_auto_slide_seconds{:type => "hidden", :value => "0"}/
+
   %div.row
     %div.span5
       %div.leftbox
