added new text for sections that we never want unlocked

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -83,6 +83,9 @@
                     %div.pointsandprogress
                       %div #{s.points_earned(current_user)} pts
                       %div #{s.percentage_complete(current_user)}%
+                  - elsif s.points_to_unlock == 9999
+                    %div{ style: "line-height: 16px;" }= truncate(s.name, length: 25)
+                    %p{ style: "font-size: 9px; line-height: 12px;" } Coming soon!
                   - else
                     %div{ style: "line-height: 16px;" }= truncate(s.name, length: 25)
                     %p{ style: "font-size: 9px; line-height: 12px;" } #{s.points_until_unlock(@enrollment)} points to unlock
