--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -25,7 +25,7 @@
         %p Complete the knowledge test to unlock the rest of this section.
         %p{ style: "margin-top: 15px;" }= link_to "Continue", continue_section_path(@current_section), class: "button button-info"
     - else
-      %p You must earn more points to unlock this section.
+      %p This section is coming soon!
 
 :javascript
   $(function(){
