--- a/app/views/sections/_edit_tasks.html.erb
+++ b/app/views/sections/_edit_tasks.html.erb
@@ -17,10 +17,10 @@ $(function(){
     });
     bind_edit_task(this);
   });
-  $(".correct_answer").change(function(){
-    $(this).unbind();
-    bind_answer_suggestion(this);
-  });
+  // $(".correct_answer").change(function(){
+    // $(this).unbind();
+    // bind_answer_suggestion(this);
+  // });
   $('.task_list td').hover(
     function(){
       $(this).find('.edit_task_buttons').show();
