--- a/app/views/tasks/add_stored_resource.html.erb
+++ b/app/views/tasks/add_stored_resource.html.erb
@@ -1,19 +1,17 @@
-<h1>New Picture</h1>
-<p>You can upload a picture for any task and have it displayed just below the question. You can use this for "identify this" type questions or just for some added visuals.</p>
-<%= form_tag({:controller => "tasks", :action => "add_stored_resource"}, { :multipart => true, :method => :put }) %>
-  <div class="field clearfix">
-    <%= label_tag :description %>
-    <div class="input">
-      <%= text_area_tag :description, nil, :class => "xxlarge", :rows => "2", :placeholder => "optional..." %>
+<div class="single_pane">
+  <h1>New Picture</h1>
+  <p>You can upload a picture for any task and have it displayed just below the question. You can use this for "identify this" type questions or just for some added visuals.</p>
+  <%= form_tag({:controller => "tasks", :action => "add_stored_resource"}, { :multipart => true, :method => :put }) %>
+    <div class="field">
+      <%= label_tag "Upload File" %>
+      <div class="input">
+        <%= file_field_tag :obj %>
+      </div>
     </div>
-  </div>
-  <div class="field">
-    <%= label_tag "Upload File" %>
-    <div class="input">
-      <%= file_field_tag :obj %>
+    <div class="field" style="margin-top: 20px;">
+      <div class="input">
+        <%= submit_tag "Save", :class => "button button-info" %>
+      </div>
     </div>
-  </div>
-  <div class="actions">
-    <%= submit_tag "Save", :class => "btn primary" %>
-  </div>
-</form>
+  </form>
+</div>
