added new text for sections we never want unlocked (again)

--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -19,5 +19,6 @@
                       %button.btn.danger Enroll
                 %div 
                   = image_tag path.path_pic, class: "mosaic-backdrop", style: "display:inline;", size: "140x140"
+          %hr{:style => "margin:0"}
                     
                 
