--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -88,7 +88,7 @@
                     %p{ style: "font-size: 9px; line-height: 12px;" } Coming soon!
                   - else
                     %div{ style: "line-height: 16px;" }= truncate(s.name, length: 25)
-                    %p{ style: "font-size: 9px; line-height: 12px;" } #{s.points_until_unlock(@enrollment)} points to unlock
+                    %p{ style: "font-size: 9px; line-height: 12px;" } #{s.points_until_unlock(@enrollment)} more points to unlock
           = render "sections/launchpad"
   
   :javascript
