--- a/app/views/layouts/_explore_modal.html.haml
+++ b/app/views/layouts/_explore_modal.html.haml
@@ -1,10 +1,6 @@
-%html
-%head
+%div#explore_modal.dropdown_modal.modal.hide.fade
   :css
-    .explorecontainer{background:none; margin-top: 40px; border:none; width:759px; }
-    .explorenewusercontent{margin:38px;}
-
-
-%div#explore_modal.modal.hide.fade
+    .explorecontainer{ background:none; margin-top: 40px; border:none; width:759px; }
+    .explorenewusercontent{ margin:38px; }
   - @personas ||= current_company.personas
   = render "personas/explore"
