--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -7,11 +7,26 @@
 %meta{ property: "og:description", content: "#{social_description}" } 
 %meta{ property: "og:image", content: "#{social_image}" }
 
+- if Rails.env == "production"
+  :javascript
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-28492737-1']);
+    _gaq.push(['_trackPageview']);
+    
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
 :javascript
   $(function(){
     $('.bar2').mosaic({ animation: 'slide' });
     $('.explore_link').click(function(){
       $("#explore_modal").modal({ keyboard: true, show: true, backdrop: true});
-    })
+    });
+    $('.notifications_link').on("ajax:success", function(xhr, data){
+      $("#notifications_modal").html(data).modal({ keyboard: true, show: true, backdrop: true});
+      $(".navitem").removeClass("highlighted");
+    });
   });
