--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -15,8 +15,8 @@
           %li.navitem
             = link_to "#", class: "explore_link" do
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/explore+signpost.png", style: "width:22px;"
-          %li.navitem
-            = link_to current_user do
+          %li.navitem{ class: "#{notifications.empty? ? '' : 'highlighted'}" }
+            = link_to notifications_path, remote: true, class: "notifications_link" do
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/profile.png"
           - if @enable_user_creation
             %li.navitem
@@ -27,6 +27,10 @@
           - if @enable_administration
             %li
               = link_to "Admin", admin_path
+          %li
+            = link_to current_user do
+              = image_tag current_user.profile_pic, style: "width: 17px; height: 17px; vertical-align: middle;"
+              %span{ style: "vertical-align: middle;" }= current_user.name
           %li
             = link_to "Sign out", signout_path
         - else
