--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,20 +2,10 @@
 %html
   %head
     = render "layouts/head"
-    - if Rails.env == "production"
-      :javascript
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-28492737-1']);
-        _gaq.push(['_trackPageview']);
-        
-        (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
   %body
     = render "layouts/navbar", { no_bar: false }
     = render "layouts/explore_modal" if current_user
+    = render "layouts/notifications_modal" if current_user
     %div.container.body{ style: "padding-top: 51px;" }
       - flash.each do |key, value|
         = content_tag(:div, value, :class => "alert-message #{key}")
