added footer to landing page

--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -28,3 +28,4 @@
       = link_to "/auth/facebook", class: "btn danger" do
         %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png" }
         %span.landingbuttontext Sign in with Facebook »
+= render "layouts/footer"
