--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -266,7 +266,7 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weigh
 .single_pane { padding: 15px; background-color: white; border-radius: 4px; min-height: 400px;}
 
 /* Footer */
-.footer{height:20px; margin-bottom: 6px; text-align:center; color:#8D8D8D}
+.footer{height:20px; margin-bottom: 6px; text-align:center; color:#8D8D8D; position:absolute; bottom:0; width:100%;}
 .copyright{}
 .footerlinks{}
 .footerlinks a{text-decoration: none; color:#707070}
